[package]
name = "rose_update"
version = "0.2.0"
authors = ["Ralph Minderhoud <ralph@rednim.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bitar = { version = "0.13.0", features = ["compress", "zstd-compression"] }
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0"
fltk = "1.5"
fltk-webview = "0.4"
futures = "0.3"
humansize = "2.1"
path-slash = "0.2.1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

# Only needed for bitar_ext
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39.0", features = ["Win32_System_Threading"] }

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
