[package]
name = "rose_update"
version = "0.3.8"
authors = ["Ralph Minderhoud <ralph@rednim.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bitar = { version = "0.14.0", features = ["compress", "zstd-compression"] }
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0"
fltk = "1.5.22"
fltk-webview = "0.4"
futures = "0.3"
hickory-resolver = "0.25.2"
humansize = "2.1"
path-slash = "0.2.1"
open = "5"
reqwest = { version = "0.13.2", default-features = false, features = [
    "brotli",
    "hickory-dns",
    "json",
    "rustls",
] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"

# Only needed for bitar_ext
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell"] }

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
